@@ -1,10 +1,10 @@
 package com.webobjects.monitor.wotaskd;
 /*
-© Copyright 2006 - 2007 Apple Computer, Inc. All rights reserved.
+¬© Copyright 2006 - 2007 Apple Computer, Inc. All rights reserved.
 
-IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. (“Apple”) in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
+IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. ("Apple") in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
 
-In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple’s copyrights in this original Apple software (the “Apple Software”), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
+In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple's copyrights in this original Apple software (the "Apple Software"), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
 
 The Apple Software is provided by Apple on an "AS IS" basis.  APPLE MAKES NO WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION THE IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, REGARDING THE APPLE SOFTWARE OR ITS USE AND OPERATION ALONE OR IN COMBINATION WITH YOUR PRODUCTS. 
 
@@ -24,6 +24,8 @@ import com.webobjects.foundation.NSComparator;
 import com.webobjects.foundation.NSDictionary;
 import com.webobjects.foundation.NSMutableArray;
 import com.webobjects.foundation.NSPathUtilities;
+
+import er.extensions.appserver.ERXResponse;
 
 public class RemoteBrowse extends WODirectAction  {
     private Object[] fileKeys = new Object[]{"file" , "fileType" , "fileSize"};
@@ -47,7 +49,7 @@ public class RemoteBrowse extends WODirectAction  {
         int anArrayCount = rootStrings.length;
         NSMutableArray rootArray = new NSMutableArray(anArrayCount);
         for (int i = 0; i < anArrayCount; i++) {
-            NSDictionary aFileDict = new NSDictionary(new Object[]{rootStrings[i] , "NSFileTypeDirectory" , new Long(0)}, fileKeys);
+            NSDictionary aFileDict = new NSDictionary(new Object[]{rootStrings[i] , "NSFileTypeDirectory" , Long.valueOf(0)}, fileKeys);
             rootArray.addObject(aFileDict);
         }
 
@@ -89,10 +91,10 @@ public class RemoteBrowse extends WODirectAction  {
 
             if (subfile.isDirectory()) {
                 aFileType = "NSFileTypeDirectory";
-                aFileSize = new Long(0);
+                aFileSize = Long.valueOf(0);
             } else {
                 aFileType = "NSFileTypeRegular";
-                aFileSize = new Long(subfile.length());
+                aFileSize = Long.valueOf(subfile.length());
             }
 
             aFileDict = new NSDictionary(new Object[]{aFile , aFileType , aFileSize}, fileKeys);
@@ -112,37 +114,36 @@ public class RemoteBrowse extends WODirectAction  {
 
     public WOResponse getPathAction() {
         WORequest aRequest = request();
-        WOResponse aResponse = new WOResponse();
+        ERXResponse aResponse = new ERXResponse();
 
         if (aRequest.isUsingWebServer())  {
             aResponse.setStatus(WOMessage.HTTP_STATUS_FORBIDDEN);
             aResponse.appendContentString("Access Denied");
             return aResponse;
-        } else {
-            String aPath = aRequest.headerForKey("filepath");
-            boolean showFiles = (aRequest.headerForKey("showFiles") != null) ? true : false;
-
-            // looking for roots, or root listing of only 1 root
-            if (aPath == null && !singleRoot) {
-                aResponse.appendContentString(xmlRoots);
-                aResponse.setHeader("YES", "isRoots");
-            } else {
-                if (aPath == null) aPath = rootStrings[0];
-                NSArray anArray = fileListForStartingPath(aPath, showFiles);
-
-                if (anArray == null) {
-                    aResponse.appendContentString("ERROR");
-                } else {
-                    _JavaMonitorCoder aCoder = new _JavaMonitorCoder();
-                    String anXMLString = null;
-                    anXMLString = aCoder.encodeRootObjectForKey(anArray, "pathArray");
-                    anXMLString = (anXMLString) + " \r\n";
-                    aResponse.appendContentString(anXMLString);
-                    aResponse.setHeader(aPath, "filepath");
-                }
-            }
-            return aResponse;
         }
+        String aPath = aRequest.headerForKey("filepath");
+        boolean showFiles = (aRequest.headerForKey("showFiles") != null) ? true : false;
+
+        // looking for roots, or root listing of only 1 root
+        if (aPath == null && !singleRoot) {
+            aResponse.appendContentString(xmlRoots);
+            aResponse.setHeader("YES", "isRoots");
+        } else {
+            if (aPath == null) aPath = rootStrings[0];
+            NSArray anArray = fileListForStartingPath(aPath, showFiles);
+
+            if (anArray == null) {
+                aResponse.appendContentString("ERROR");
+            } else {
+                _JavaMonitorCoder aCoder = new _JavaMonitorCoder();
+                String anXMLString = null;
+                anXMLString = aCoder.encodeRootObjectForKey(anArray, "pathArray");
+                anXMLString = (anXMLString) + " \r\n";
+                aResponse.appendContentString(anXMLString);
+                aResponse.setHeader(aPath, "filepath");
+            }
+        }
+        return aResponse;
     }
 
 }
