@@ -22,17 +22,17 @@ public class ERPChartsPage extends ERXComponent {
 		if (_itemSet1 == null) {
 			NSArray keys = new NSArray(Arrays.asList("name", "value", "category"));
 			
-			NSMutableDictionary oneA = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(100), "01/2011")), keys);
-			NSMutableDictionary oneB = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(150), "02/2011")), keys);
-			NSMutableDictionary oneC = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(200), "03/2011")), keys);
+			NSMutableDictionary oneA = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(100), "01/2011")), keys);
+			NSMutableDictionary oneB = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(150), "02/2011")), keys);
+			NSMutableDictionary oneC = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(200), "03/2011")), keys);
 
-			NSMutableDictionary twoA = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", new Integer(200), "01/2011")), keys);
-			NSMutableDictionary twoB = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", new Integer(210), "02/2011")), keys);
-			NSMutableDictionary twoC = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", new Integer(215), "03/2011")), keys);
+			NSMutableDictionary twoA = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", Integer.valueOf(200), "01/2011")), keys);
+			NSMutableDictionary twoB = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", Integer.valueOf(210), "02/2011")), keys);
+			NSMutableDictionary twoC = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", Integer.valueOf(215), "03/2011")), keys);
 
-			NSMutableDictionary threeA = new NSMutableDictionary(new NSArray(Arrays.asList("Android", new Integer(50), "01/2011")), keys);
-			NSMutableDictionary threeB = new NSMutableDictionary(new NSArray(Arrays.asList("Android", new Integer(55), "02/2011")), keys);
-			NSMutableDictionary threeC = new NSMutableDictionary(new NSArray(Arrays.asList("Android", new Integer(110), "03/2011")), keys);
+			NSMutableDictionary threeA = new NSMutableDictionary(new NSArray(Arrays.asList("Android", Integer.valueOf(50), "01/2011")), keys);
+			NSMutableDictionary threeB = new NSMutableDictionary(new NSArray(Arrays.asList("Android", Integer.valueOf(55), "02/2011")), keys);
+			NSMutableDictionary threeC = new NSMutableDictionary(new NSArray(Arrays.asList("Android", Integer.valueOf(110), "03/2011")), keys);
 
 			_itemSet1 = new NSArray(Arrays.asList(twoA, twoB, twoC, oneA, oneB, oneC, threeA, threeB, threeC));
 		}
@@ -48,17 +48,17 @@ public class ERPChartsPage extends ERXComponent {
 		if (_itemSet1a == null) {
 			NSArray keys = new NSArray(Arrays.asList("name", "value", "category"));
 			
-			NSMutableDictionary oneA = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(100), "01/2011")), keys);
-			NSMutableDictionary oneB = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(150), "02/2011")), keys);
-			NSMutableDictionary oneC = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(200), "03/2011")), keys);
+			NSMutableDictionary oneA = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(100), "01/2011")), keys);
+			NSMutableDictionary oneB = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(150), "02/2011")), keys);
+			NSMutableDictionary oneC = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(200), "03/2011")), keys);
 
-			NSMutableDictionary twoA = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", new Integer(200), "01/2011")), keys);
-			NSMutableDictionary twoB = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", new Integer(210), "02/2011")), keys);
-			NSMutableDictionary twoC = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", new Integer(215), "03/2011")), keys);
+			NSMutableDictionary twoA = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", Integer.valueOf(200), "01/2011")), keys);
+			NSMutableDictionary twoB = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", Integer.valueOf(210), "02/2011")), keys);
+			NSMutableDictionary twoC = new NSMutableDictionary(new NSArray(Arrays.asList("RIM", Integer.valueOf(215), "03/2011")), keys);
 
-			NSMutableDictionary threeA = new NSMutableDictionary(new NSArray(Arrays.asList("Android", new Integer(50), "01/2011")), keys);
-			NSMutableDictionary threeB = new NSMutableDictionary(new NSArray(Arrays.asList("Android", new Integer(55), "02/2011")), keys);
-			NSMutableDictionary threeC = new NSMutableDictionary(new NSArray(Arrays.asList("Android", new Integer(110), "03/2011")), keys);
+			NSMutableDictionary threeA = new NSMutableDictionary(new NSArray(Arrays.asList("Android", Integer.valueOf(50), "01/2011")), keys);
+			NSMutableDictionary threeB = new NSMutableDictionary(new NSArray(Arrays.asList("Android", Integer.valueOf(55), "02/2011")), keys);
+			NSMutableDictionary threeC = new NSMutableDictionary(new NSArray(Arrays.asList("Android", Integer.valueOf(110), "03/2011")), keys);
 
 			_itemSet1a = new NSArray(Arrays.asList(oneA, oneB, oneC, twoA, twoB, twoC, threeA, threeB, threeC));
 		}
@@ -74,10 +74,10 @@ public class ERPChartsPage extends ERXComponent {
 		if (_itemSet2 == null) {
 			NSArray keys = new NSArray(Arrays.asList("name", "value", "category"));
 			
-			NSMutableDictionary oneA = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(20), "01/2011")), keys);
-			NSMutableDictionary oneB = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(25), "02/2011")), keys);
-			NSMutableDictionary oneC = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(30), "03/2011")), keys);
-			NSMutableDictionary oneD = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", new Integer(75), "Total Q1")), keys);
+			NSMutableDictionary oneA = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(20), "01/2011")), keys);
+			NSMutableDictionary oneB = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(25), "02/2011")), keys);
+			NSMutableDictionary oneC = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(30), "03/2011")), keys);
+			NSMutableDictionary oneD = new NSMutableDictionary(new NSArray(Arrays.asList("iPhone", Integer.valueOf(75), "Total Q1")), keys);
 
 			_itemSet2 = new NSArray(Arrays.asList(oneA, oneB, oneC, oneD));
 		}
