@@ -13,7 +13,6 @@ import er.extensions.foundation.ERXValueUtilities;
 /**
  * Abstract super class for a navigation bar that can be used with AjaxGrid. Use
  * of this is not mandatory, it is provided as a convenience.
- * <p>
  * <h3>Example Usage</h3>
  * This class has a symbiotic relationship with AjaxGrid. When this nav bar
  * changes the data (e.g. batch size, batch displayed) it updates the grid's
@@ -56,8 +55,6 @@ import er.extensions.foundation.ERXValueUtilities;
  *    &lt;/webobject name=&quot;NavUpdater&quot;&gt;
  *  &lt;/div&gt;
  * </pre>
- * 
- * <p>
  * 
  * <pre>
  *  NavUpdater: AjaxUpdateContainer {
@@ -125,6 +122,12 @@ import er.extensions.foundation.ERXValueUtilities;
  * @author Chuck Hill
  */
 public abstract class AjaxGridNavBar extends WOComponent {
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
 
 	public static final String CONTAINER_ID_BINDING = "containerID";
 	public static final String DISPLAY_GROUP_BINDING = "displayGroup";
@@ -134,9 +137,7 @@ public abstract class AjaxGridNavBar extends WOComponent {
 		super(context);
 	}
 
-	/**
-	 * @return false, AjaxGridNavBar is stateless and manually synchronized
-	 */
+	@Override
 	public boolean isStateless() {
 		return true;
 	}
@@ -169,7 +170,7 @@ public abstract class AjaxGridNavBar extends WOComponent {
 		// If we round this instead, the slider movement is more inutuitive,
 		// especially with smaller batch sizes.
 		if (newValue instanceof BigDecimal) {
-			int roundedIndex = new Float(((BigDecimal) newValue).floatValue() + 0.5).intValue();
+			int roundedIndex = Float.valueOf(((BigDecimal) newValue).floatValue() + 0.5f).intValue();
 			displayGroup().setCurrentBatchIndex(roundedIndex);
 		}
 		else {
