@@ -10,7 +10,6 @@
 package com.amazon.s3;
 
 import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
 import java.net.URLEncoder;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
@@ -23,11 +22,11 @@ import java.util.TreeMap;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 
+import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.lang3.CharEncoding;
+import org.xml.sax.SAXException;
 import org.xml.sax.XMLReader;
 import org.xml.sax.helpers.XMLReaderFactory;
-import org.xml.sax.SAXException;
-
-import sun.misc.BASE64Encoder;
 
 public class Utils {
     static final String METADATA_PREFIX = "x-amz-meta-";
@@ -50,11 +49,16 @@ public class Utils {
     /**
      * Calculate the canonical string.  When expires is non-null, it will be
      * used instead of the Date header.
+     * @param method 
+     * @param resource 
+     * @param headers 
+     * @param expires 
+     * @return canoncical string
      */
     static String makeCanonicalString(String method, String resource,
                                              Map headers, String expires)
     {
-        StringBuffer buf = new StringBuffer();
+    	StringBuilder buf = new StringBuilder();
         buf.append(method + "\n");
 
         // Add all interesting headers to a list, then sort them.  "Interesting"
@@ -103,7 +107,7 @@ public class Utils {
             } else {
                 buf.append(interestingHeaders.get(key));
             }
-            buf.append("\n");
+            buf.append('\n');
         }
 
         // don't include the query parameters...
@@ -126,11 +130,10 @@ public class Utils {
 
     /**
      * Calculate the HMAC/SHA1 on a string.
-     * @param data Data to sign
-     * @param passcode Passcode to sign it with
+     * @param awsSecretAccessKey passcode to sign with
+     * @param canonicalString string to sign
+     * @param urlencode <code>true</code> to urlencode the result
      * @return Signature
-     * @throws NoSuchAlgorithmException If the algorithm does not exist.  Unlikely
-     * @throws InvalidKeyException If the key is invalid.
      */
     static String encode(String awsSecretAccessKey, String canonicalString,
                                 boolean urlencode)
@@ -158,7 +161,7 @@ public class Utils {
         }
 
         // Compute the HMAC on the digest, and set it.
-        String b64 = new BASE64Encoder().encode(mac.doFinal(canonicalString.getBytes()));
+        String b64 = Base64.encodeBase64String(mac.doFinal(canonicalString.getBytes()));
 
         if (urlencode) {
             return urlencode(b64);
@@ -168,8 +171,8 @@ public class Utils {
     }
 
     static String pathForListOptions(String bucket, String prefix, String marker, Integer maxKeys) {
-        StringBuffer path = new StringBuffer(bucket);
-        path.append("?");
+    	StringBuilder path = new StringBuilder(bucket);
+        path.append('?');
 
         // these two params must be url encoded
         if (prefix != null) path.append("prefix=" + urlencode(prefix) + "&");
@@ -183,7 +186,7 @@ public class Utils {
 
     static String urlencode(String unencoded) {
         try {
-            return URLEncoder.encode(unencoded, "UTF-8");
+            return URLEncoder.encode(unencoded, CharEncoding.UTF_8);
         } catch (UnsupportedEncodingException e) {
             // should never happen
             throw new RuntimeException("Could not url encode to UTF-8", e);
@@ -211,11 +214,11 @@ public class Utils {
      * @return String of all headers, with commas.
      */
     private static String concatenateList(List values) {
-        StringBuffer buf = new StringBuffer();
+    	StringBuilder buf = new StringBuilder();
         for (int i = 0, size = values.size(); i < size; ++ i) {
             buf.append(((String)values.get(i)).replaceAll("\n", "").trim());
             if (i != (size - 1)) {
-                buf.append(",");
+                buf.append(',');
             }
         }
         return buf.toString();
