@@ -1,7 +1,7 @@
 /*
- * Voting.java [JavaBusinessLogic Project] © Copyright 2005 Apple Computer, Inc. All rights reserved. IMPORTANT: This Apple software is supplied to you by Apple Computer, Inc. (“Apple”) in consideration of your agreement to the following terms, and your use, installation, modification or
+ * Voting.java [JavaBusinessLogic Project] ¬© Copyright 2005 Apple Computer, Inc. All rights reserved. IMPORTANT: This Apple software is supplied to you by Apple Computer, Inc. ("Apple") in consideration of your agreement to the following terms, and your use, installation, modification or
  * redistribution of this Apple software constitutes acceptance of these terms. If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software. In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants
- * you a personal, non-exclusive license, under Apple’s copyrights in this original Apple software (the “Apple Software”), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software
+ * you a personal, non-exclusive license, under Apple's copyrights in this original Apple software (the "Apple Software"), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software
  * in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software. Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the
  * Apple Software without specific prior written permission from Apple. Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other
  * works in which the Apple Software may be incorporated. The Apple Software is provided by Apple on an "AS IS" basis. APPLE MAKES NO WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION THE IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE,
@@ -11,8 +11,6 @@
  */
 
 package webobjectsexamples.businesslogic.movies.common;
-
-import com.webobjects.eocontrol.EOGenericRecord;
 
 // Voting uses get<key> style get methods (instead of <key>) as an example
 public class Voting extends _Voting {
@@ -30,7 +28,7 @@ public class Voting extends _Voting {
 
 	public Number getNumberOfVotes() {
 		Number numberOfVotes = (Number) (storedValueForKey(NumberOfVotesKey));
-		return (numberOfVotes != null) ? numberOfVotes : new Integer(0);
+		return (numberOfVotes != null) ? numberOfVotes : Integer.valueOf(0);
 	}
 
 	public void setNumberOfVotes(Number value) {
@@ -39,7 +37,7 @@ public class Voting extends _Voting {
 
 	public Number getRunningAverage() {
 		Number runningAverage = (Number) (storedValueForKey(RunningAverageKey));
-		return (runningAverage != null) ? runningAverage : new Double(0.0);
+		return (runningAverage != null) ? runningAverage : Double.valueOf(0.0);
 	}
 
 	public void setRunningAverage(Number value) {
@@ -52,8 +50,8 @@ public class Voting extends _Voting {
 			double total = getRunningAverage().doubleValue() * numberOfVotes + vote;
 			++numberOfVotes;
 
-			setNumberOfVotes(new Integer(numberOfVotes));
-			setRunningAverage(new Double(total / numberOfVotes));
+			setNumberOfVotes(Integer.valueOf(numberOfVotes));
+			setRunningAverage(Double.valueOf(total / numberOfVotes));
 		}
 	}
 }
