@@ -1,7 +1,7 @@
 /*
- * User.java [JavaBusinessLogic Project] © Copyright 2005 Apple Computer, Inc. All rights reserved. IMPORTANT: This Apple software is supplied to you by Apple Computer, Inc. (“Apple”) in consideration of your agreement to the following terms, and your use, installation, modification or
+ * User.java [JavaBusinessLogic Project] ¬© Copyright 2005 Apple Computer, Inc. All rights reserved. IMPORTANT: This Apple software is supplied to you by Apple Computer, Inc. ("Apple") in consideration of your agreement to the following terms, and your use, installation, modification or
  * redistribution of this Apple software constitutes acceptance of these terms. If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software. In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants
- * you a personal, non-exclusive license, under Apple’s copyrights in this original Apple software (the “Apple Software”), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software
+ * you a personal, non-exclusive license, under Apple's copyrights in this original Apple software (the "Apple Software"), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software
  * in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software. Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the
  * Apple Software without specific prior written permission from Apple. Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other
  * works in which the Apple Software may be incorporated. The Apple Software is provided by Apple on an "AS IS" basis. APPLE MAKES NO WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION THE IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE,
@@ -13,20 +13,16 @@
 package webobjectsexamples.businesslogic.rentals.common;
 
 import com.webobjects.eocontrol.EOEditingContext;
-import com.webobjects.eocontrol.EOGenericRecord;
+import com.webobjects.eocontrol.EOEnterpriseObject;
+import com.webobjects.foundation.NSArray;
 
-public class User extends EOGenericRecord {
-	private static final long	serialVersionUID			= -4880721435398743375L;
+import er.corebusinesslogic.ERCoreUserInterface;
 
-	public static final String	AccessLevelKey				= "accessLevel";
+public class User extends _User implements ERCoreUserInterface {
 
-	public static final String	CustomerKey					= "customer";
+    private static final long serialVersionUID = 1L;
 
-	public static final String	PasswordKey					= "password";
-
-	public static final String	UsernameKey					= "username";
-
-	public static final int		NoAccessLevel				= 4;
+    public static final int		NoAccessLevel				= 4;
 
 	public static final int		CustomerAccessLevel			= 3;
 
@@ -42,16 +38,8 @@ public class User extends EOGenericRecord {
 	public void awakeFromInsertion(EOEditingContext editingContext) {
 		super.awakeFromInsertion(editingContext);
 		if (accessLevel() == null) {
-			setAccessLevel(new Integer(NoAccessLevel));
+			setAccessLevel(Integer.valueOf(NoAccessLevel));
 		}
-	}
-
-	public Number accessLevel() {
-		return (Number) (storedValueForKey(AccessLevelKey));
-	}
-
-	public void setAccessLevel(Number value) {
-		takeStoredValueForKey(value, AccessLevelKey);
 	}
 
 	private boolean _hasAccessLevel(int level) {
@@ -70,4 +58,24 @@ public class User extends EOGenericRecord {
 	public boolean hasCustomerAccessLevel() {
 		return _hasAccessLevel(CustomerAccessLevel);
 	}
+
+    /*
+     * ERCore user interface implementation
+     */
+
+    @Override
+    public void newPreference(EOEnterpriseObject pref) {
+        addObjectToBothSidesOfRelationshipWithKey(pref, "preferences");
+    }
+
+    @Override
+    public void setPreferences(NSArray array) {
+        takeStoredValueForKey(array.mutableClone(), "preferences");
+    }
+
+    @Override
+    public NSArray preferences() {
+        return (NSArray) storedValueForKey("preferences");
+    }
+
 }
