@@ -1,9 +1,3 @@
-//
-// PayPalSingleItemHyperlink.java: Class file for WO Component 'PayPalSingleItemHyperlink'
-// Project WOPayPal
-//
-// Created by travis on Sat Feb 09 2002
-//
 package er.wopaypal;
 
 import java.io.UnsupportedEncodingException;
@@ -12,6 +6,8 @@ import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.util.Enumeration;
 import java.util.Locale;
+
+import org.apache.commons.lang3.CharEncoding;
 
 import com.webobjects.appserver.WOActionResults;
 import com.webobjects.appserver.WOContext;
@@ -40,12 +36,8 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
      *
      * @return boolean
      */
+    @Override
     public boolean isStateless() { return true; }
-    /** Tells the component not to synchronize its binding values.  This means we have to do it manually.
-     *
-     * @return boolean
-     */
-    public boolean synchronizesVariablesWithBindings() { return false; }
 
     /** Assembles the url to send to PayPal for the single item purchase
      *
@@ -68,7 +60,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
         DecimalFormat currencyFormatter = new DecimalFormat("##0.00", new DecimalFormatSymbols(Locale.US));
         DecimalFormat taxFormatter = new DecimalFormat("##0.000", new DecimalFormatSymbols(Locale.US));
 
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
         sb.append("&business=" + urlEncode(payPalBusinessName) ); // required!!!
         if (userDefinableQuantity!=null) {
             sb.append("&undefined_quantity=" + (userDefinableQuantity.booleanValue() ? "1" : "0") );  
@@ -126,7 +118,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
         String output = null;
         if (input != null) {
           try {
-              output = URLEncoder.encode(input, "UTF-8");
+              output = URLEncoder.encode(input, CharEncoding.UTF_8);
           } catch (UnsupportedEncodingException uee) {
               NSLog.err.appendln("Could not URL encode input string.  Error: " + uee.getMessage());
           }
@@ -139,6 +131,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
      *
      * @return NSArray
      */
+    @Override
     protected NSArray additionalBindingList() {
         NSMutableArray bindingArray = new NSMutableArray(); // super.bindingList();
         bindingArray.addObjectsFromArray(new NSArray(new Object[] {}));
@@ -165,6 +158,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
 
     /** Resets the values pulled from the WOComponent to null.
      */
+    @Override
     public void reset() {
         Enumeration enumeration = baseBindingList().objectEnumerator();
 
@@ -179,6 +173,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
             String key = (String) enumeration.nextElement();
             takeValueForKey(null, key);
         }
+        super.reset();
     }
 
     /** Overrides the default behavior and tells the Component to synchronize its ivar values with those bound to the WOComponent's bindings by calling pullBindings()
@@ -186,6 +181,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
      * @param r WOResponse
      * @param c WOContext
      */
+    @Override
     public void appendToResponse(WOResponse r, WOContext c) {
         pullBindings();
         super.appendToResponse(r,c);
@@ -196,6 +192,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
      * @param r WORequest
      * @param c WOContext
      */
+    @Override
     public void takeValuesFromRequest(WORequest r, WOContext c) {
         pullBindings();
         super.takeValuesFromRequest(r,c);
@@ -207,6 +204,7 @@ public class PayPalSingleItemHyperlink extends PayPalSingleItemLinkBase {
      * @param c WOContext
      * @return WOActionResults
      */
+    @Override
     public WOActionResults invokeAction(WORequest r, WOContext c) {
         pullBindings();
         return super.invokeAction(r,c);
