@@ -9,15 +9,18 @@ package er.extensions.appserver;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.math.BigDecimal;
+import java.net.BindException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.net.URLConnection;
 import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.Enumeration;
@@ -27,13 +30,14 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.Random;
 import java.util.Set;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
+import java.util.regex.Pattern;
 
 import javax.xml.parsers.DocumentBuilderFactory;
 
+import org.apache.commons.lang3.CharEncoding;
 import org.apache.log4j.Appender;
 import org.apache.log4j.ConsoleAppender;
 import org.apache.log4j.Logger;
@@ -44,9 +48,11 @@ import org.w3c.dom.NodeList;
 
 import com.webobjects.appserver.WOAction;
 import com.webobjects.appserver.WOActionResults;
+import com.webobjects.appserver.WOAdaptor;
 import com.webobjects.appserver.WOApplication;
 import com.webobjects.appserver.WOComponent;
 import com.webobjects.appserver.WOContext;
+import com.webobjects.appserver.WOCookie;
 import com.webobjects.appserver.WOMessage;
 import com.webobjects.appserver.WORedirect;
 import com.webobjects.appserver.WORequest;
@@ -56,8 +62,11 @@ import com.webobjects.appserver.WOResponse;
 import com.webobjects.appserver.WOSession;
 import com.webobjects.appserver.WOTimer;
 import com.webobjects.appserver._private.WOComponentDefinition;
+import com.webobjects.appserver._private.WODeployedBundle;
 import com.webobjects.appserver._private.WOProperties;
+import com.webobjects.appserver._private.WOWebServicePatch;
 import com.webobjects.eocontrol.EOEditingContext;
+import com.webobjects.eocontrol.EOObserverCenter;
 import com.webobjects.eocontrol.EOTemporaryGlobalID;
 import com.webobjects.foundation.NSArray;
 import com.webobjects.foundation.NSBundle;
@@ -74,10 +83,10 @@ import com.webobjects.foundation.NSNotification;
 import com.webobjects.foundation.NSNotificationCenter;
 import com.webobjects.foundation.NSProperties;
 import com.webobjects.foundation.NSPropertyListSerialization;
-import com.webobjects.foundation.NSRange;
 import com.webobjects.foundation.NSSelector;
 import com.webobjects.foundation.NSSet;
 import com.webobjects.foundation.NSTimestamp;
+import com.webobjects.foundation.development.NSBundleFactory;
 
 import er.extensions.ERXExtensions;
 import er.extensions.ERXFrameworkPrincipal;
@@ -88,7 +97,6 @@ import er.extensions.components._private.ERXActiveImage;
 import er.extensions.components._private.ERXWOForm;
 import er.extensions.components._private.ERXWORepetition;
 import er.extensions.components._private.ERXWOString;
-import er.extensions.components._private.ERXWOText;
 import er.extensions.components._private.ERXWOTextField;
 import er.extensions.eof.ERXConstant;
 import er.extensions.eof.ERXDatabaseContextDelegate;
@@ -97,11 +105,12 @@ import er.extensions.formatters.ERXFormatterFactory;
 import er.extensions.foundation.ERXArrayUtilities;
 import er.extensions.foundation.ERXCompressionUtilities;
 import er.extensions.foundation.ERXConfigurationManager;
+import er.extensions.foundation.ERXExceptionUtilities;
 import er.extensions.foundation.ERXPatcher;
 import er.extensions.foundation.ERXProperties;
 import er.extensions.foundation.ERXRuntimeUtilities;
 import er.extensions.foundation.ERXThreadStorage;
-import er.extensions.foundation.ERXTimestampUtility;
+import er.extensions.foundation.ERXTimestampUtilities;
 import er.extensions.localization.ERXLocalizer;
 import er.extensions.migration.ERXMigrator;
 import er.extensions.statistics.ERXStats;
@@ -128,7 +137,7 @@ import er.extensions.statistics.ERXStats;
  * @property er.extensions.ERXApplication.StatisticsBaseLogPath
  * @property er.extensions.ERXApplication.StatisticsLogRotationFrequency
  * @property er.extensions.ERXApplication.developmentMode
- * @property er.extensions.ERXApplication.developmentMode
+ * @property er.extensions.ERXApplication.enableERXShutdownHook
  * @property er.extensions.ERXApplication.fixCachingEnabled
  * @property er.extensions.ERXApplication.lowMemBufferSize
  * @property er.extensions.ERXApplication.memoryLowThreshold
@@ -143,17 +152,11 @@ import er.extensions.statistics.ERXStats;
  * @property er.extensions.ERXApplication.ssl.enabled
  * @property er.extensions.ERXApplication.ssl.host
  * @property er.extensions.ERXApplication.ssl.port
- * @property er.extensions.ERXApplication.traceOpenEditingContextLocks
- * @property er.extensions.ERXApplication.traceOpenEditingContextLocks
- * @property er.extensions.ERXApplication.useEditingContextUnlocker
- * @property er.extensions.ERXApplication.useEditingContextUnlocker
  * @property er.extensions.ERXApplication.useSessionStoreDeadlockDetection
  * @property er.extensions.ERXComponentActionRedirector.enabled
+ * @property er.extensions.ERXApplication.allowMultipleDevInstances
  */
 public abstract class ERXApplication extends ERXAjaxApplication implements ERXGracefulShutdown.GracefulApplication {
-
-	private static Boolean isWO54 = null;
-
 	/** logging support */
 	public static final Logger log = Logger.getLogger(ERXApplication.class);
 
@@ -167,6 +170,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	public static final Logger startupLog = Logger.getLogger("er.extensions.ERXApplication.Startup");
 
 	private static boolean wasERXApplicationMainInvoked = false;
+
+	/** empty array for adaptorExtensions */
+    private static String[] myAppExtensions = {};
 
 	/**
 	 * Notification to get posted when we get an OutOfMemoryError or when memory passes
@@ -286,6 +292,21 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	protected boolean _initializedAdaptors = false;
 
 	/**
+	 * To support load balancing with mod_proxy
+	 */
+	private String _proxyBalancerRoute = null;
+
+	/**
+	 * To support load balancing with mod_proxy
+	 */
+	private String _proxyBalancerCookieName = null;
+
+	/**
+	 * To support load balancing with mod_proxy
+	 */
+	private String _proxyBalancerCookiePath = null;
+
+	/**
 	 * Copies the props from the command line to the static dict
 	 * propertiesFromArgv.
 	 * 
@@ -312,7 +333,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			for (int i = 0; i < files.length; i++) {
 				String string = files[i];
 				try {
-					urls[i] = new File(string).toURL();
+					urls[i] = new File(string).toURI().toURL();
 				}
 				catch (MalformedURLException e) {
 					// TODO Auto-generated catch block
@@ -349,9 +370,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	private static Loader _loader;
 
 	/**
-	 * Responsible for classpath munging.
+	 * Responsible for classpath munging and ensuring all bundles are loaded
 	 * 
-	 *
+	 * @property er.extensions.appserver.projectBundleLoading - to see logging this has to be set on the command line by using -Der.extensions.appserver.projectBundleLoading=DEBUG
+	 * 
 	 * @author ak
 	 */
 	public static class Loader {
@@ -413,8 +435,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 				return bundle.properties();
 			}
 
+			InputStream inputStream = null;
 			try {
-				InputStream inputStream = bundle.inputStreamForResourcePath(name);
+				inputStream = bundle.inputStreamForResourcePath(name);
 				if(inputStream == null) {
 					return null;
 				}
@@ -429,6 +452,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			}
 			catch (IOException exception) {
 				return null;
+			} finally {
+				if (inputStream != null) {
+					try { inputStream.close(); } catch (IOException e) {}
+				}
 			}
 		}
 
@@ -468,17 +495,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 						else if (fixedJar.matches(frameworkPattern) || fixedJar.matches(appPattern) || fixedJar.matches(folderPattern)) {
 							normalLibs += jar + File.pathSeparator;
 						}
-						else if (fixedJar.matches(projectPattern) || fixedJar.matches(".*?/ERFoundation.jar") || fixedJar.matches(".*?/ERWebObjects.jar")) {
+						else if (fixedJar.matches(projectPattern) || fixedJar.matches(".*?/erfoundation.jar") || fixedJar.matches(".*?/erwebobjects.jar")) {
 							normalLibs += jar + File.pathSeparator;
 						}
 						else {
 							jarLibs += jar + File.pathSeparator;
 						}
 						String bundle = jar.replaceAll(".*?[/\\\\](\\w+)\\.framework.*", "$1");
-						String excludes = "(JavaVM)";
-						if (isWO54()) {
-							excludes = "(JavaVM|JavaWebServicesSupport|JavaEODistribution|JavaWebServicesGeneration|JavaWebServicesClient)";
-						}
+						String excludes = "(JavaVM|JavaWebServicesSupport|JavaEODistribution|JavaWebServicesGeneration|JavaWebServicesClient)";
 						if (bundle.matches("^\\w+$") && !bundle.matches(excludes)) {
 							String info = jar.replaceAll("(.*?[/\\\\]\\w+\\.framework/Resources/).*", "$1Info.plist");
 							if (new File(info).exists()) {
@@ -522,8 +546,20 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 										}
 										if (isBundle) {
 											System.setProperty("NSProjectBundleEnabled", "true");
-											allFrameworks.add(classpathFolder.getName());
-											debugMsg("Added Binary Bundle: " + allFrameworks);
+											String bundleName = classpathFolder.getName();
+
+											File buildPropertiesFile = new File(classpathFolder, "build.properties");
+											if (buildPropertiesFile.exists()) {
+												Properties buildProperties = new Properties();
+												buildProperties.load(new FileReader(buildPropertiesFile));
+												if (buildProperties.get("project.name") != null) {
+													// the project folder might be named differently than the actual bundle name
+													bundleName = (String) buildProperties.get("project.name");
+												}
+											}
+											
+											allFrameworks.add(bundleName);
+											debugMsg("Added Binary Bundle (Project bundle): " + bundleName);
 										} else {
 											debugMsg("Skipping binary bundle: " + jar);
 										}
@@ -532,9 +568,8 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 										System.err.println("Skipping '" + projectFile + "': " + t);
 									}
 									break;
-								} else {
-									debugMsg("Skipping, no project: " + projectFile);
 								}
+								debugMsg("Skipping, no project: " + projectFile);
 							}
 						}
 					}
@@ -561,11 +596,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 					}
 				}
 			}
-			NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("bundleDidLoad", new Class[] { NSNotification.class }), "NSBundleDidLoadNotification", null);
+			NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("bundleDidLoad", ERXConstant.NotificationClassArray), "NSBundleDidLoadNotification", null);
 		}
 		
+		// for logging before logging has been setup and configured by loading the properties files
 		private void debugMsg(String msg) {
-			// System.out.println(msg);
+			if ("DEBUG".equals(System.getProperty("er.extensions.appserver.projectBundleLoading"))) {
+				System.out.println(msg); 
+			}
 		}
 		
 		public boolean didLoad() {
@@ -584,6 +622,13 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			if (mainBundle == null) {
 				// AK: when we get here, the main bundle wasn't inited yet
 				// so we do it ourself...
+				
+				if (isDevelopmentModeSafe() && 
+						ERXConfigurationManager.defaultManager().isDeployedAsServlet()) {
+					// bundle-less builds do not appear to work when running in servlet mode, so make it prefer the legacy bundle style 
+					NSBundleFactory.registerBundleFactory(new com.webobjects.foundation.development.NSLegacyBundle.Factory());
+				}
+				
 				try {
 					Field ClassPath = NSBundle.class.getDeclaredField("ClassPath");
 					ClassPath.setAccessible(true);
@@ -613,13 +658,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		 * 
 		 * @param n
 		 */
-
-		
-		
 		public void bundleDidLoad(NSNotification n) {
 			NSBundle bundle = (NSBundle) n.object();
-			// System.out.println(bundle.name() + ": " + allFrameworks);
-			allFrameworks.remove(bundle.name());
+			if (allFrameworks.contains(bundle.name())) {
+				allFrameworks.remove(bundle.name());
+				debugMsg("Loaded " + bundle.name() + ". Remaining: " + allFrameworks);
+			} else if (bundle.isFramework()) {
+				debugMsg("Loaded unexpected framework bundle '" + bundle.name() + "'. Ensure your build.properties settings like project.name match the bundle name (including case).");
+			}
 			if (allBundleProps == null) {
 				allBundleProps = new Properties();
 			}
@@ -707,14 +753,17 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 					URL userPropertiesPath = null;
 					String mainBundleName = NSProperties._mainBundleName();
 
+					// Look for a jar file name like: myapp[-1.0][-SNAPSHOT].jar
+					Pattern mainBundleJarPattern = Pattern.compile("\\b" + mainBundleName.toLowerCase() + "[-\\.\\d]*(snapshot)?\\.jar");
+					
 					while (jarBundles.hasMoreElements()) {
 						URL url = jarBundles.nextElement();
 
 						String urlAsString = url.toString();
 
-						if (urlAsString.contains(mainBundleName + ".jar")) {
+						if (mainBundleJarPattern.matcher(urlAsString.toLowerCase()).find()) {
 							try {
-								propertiesPath = new URL(URLDecoder.decode(urlAsString, "UTF-8"));
+								propertiesPath = new URL(URLDecoder.decode(urlAsString, CharEncoding.UTF_8));
 								userPropertiesPath = new URL(propertiesPath.toExternalForm() + userName);
 							}
 							catch (MalformedURLException exception) {
@@ -779,6 +828,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	private String stringFromJar(String jar, String path) {
 		JarFile f;
+		InputStream is = null;
 		try {
 			if (!new File(jar).exists()) {
 				ERXApplication.log.warn("Will not process jar '" + jar + "' because it cannot be found ...");
@@ -787,7 +837,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			f = new JarFile(jar);
 			JarEntry e = (JarEntry) f.getEntry(path);
 			if (e != null) {
-				InputStream is = f.getInputStream(e);
+				is = f.getInputStream(e);
 				ByteArrayOutputStream bout = new ByteArrayOutputStream();
 				int read = -1;
 				byte[] buf = new byte[1024 * 50];
@@ -795,7 +845,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 					bout.write(buf, 0, read);
 				}
 
-				String content = new String(bout.toByteArray(), "UTF-8");
+				String content = new String(bout.toByteArray(), CharEncoding.UTF_8);
 				return content;
 			}
 			return null;
@@ -806,7 +856,22 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		catch (IOException e1) {
 			throw NSForwardException._runtimeExceptionForThrowable(e1);
 		}
+		finally {
+			if (is != null) {
+				try {
+					is.close();
+				}
+				catch (IOException e) {
+					// ignore
+				}
+			}
+		}
 	}
+	}
+	
+	// You should not use ERXShutdownHook when deploying as servlet.
+	protected static boolean enableERXShutdownHook() {
+		return ERXProperties.booleanForKeyWithDefault("er.extensions.ERXApplication.enableERXShutdownHook", true);
 	}
 
 	/**
@@ -817,9 +882,66 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 */
 	public static void main(String argv[], Class applicationClass) {
 		setup(argv);
+		
+		if(enableERXShutdownHook()) {
+			ERXShutdownHook.initERXShutdownHook();
+		}
+
 		WOApplication.main(argv, applicationClass);
 	}
 
+	/**
+	 * <p>Terminates a different instance of the same application that may already be running.<br>
+	 * Only in dev mode.</p>
+	 * <p>Set the property "er.extensions.ERXApplication.allowMultipleDevInstances" to "true" if
+	 * you need to run multiple instances in dev mode.</p>
+	 * 
+	 * @return true if a previously running instance was stopped.
+	 */
+	private static boolean stopPreviousDevInstance() {
+		if (!isDevelopmentModeSafe() || 
+				ERXProperties.booleanForKeyWithDefault("er.extensions.ERXApplication.allowMultipleDevInstances", false)) {
+			return false;
+		}
+		
+		if (!(application().wasMainInvoked())) {
+			return false;
+		}
+		
+		String adapterUrl;
+		if (application().host() != null) {
+			adapterUrl = application().cgiAdaptorURL();
+		} else {
+			adapterUrl = application().cgiAdaptorURL().replace("://null/", "://localhost/");
+		}
+		
+		String appUrl;
+		if (application().isDirectConnectEnabled()) {
+			appUrl = adapterUrl.replace("/cgi", ":" + application().port() + "/cgi");
+			appUrl += "/" + application().name() + application().applicationExtension();
+		} else {
+			appUrl = adapterUrl + "/" + application().name() + application().applicationExtension() + "/-" + application().port();
+		}
+		
+		URL url;
+		try {
+			appUrl = appUrl + "/" + application().directActionRequestHandlerKey() + "/stop";
+			url = new URL(appUrl);
+
+			log.debug("Stopping previously running instance of " + application().name());
+			
+			URLConnection connection = url.openConnection();
+			connection.getContent();
+			
+			Thread.sleep(2000);
+			
+			return true;
+		} catch (Throwable e) {
+			e.printStackTrace();
+		}
+		return false;
+	}
+	
 	/**
 	 * Utility class to track down duplicate items in the class path. Reports
 	 * duplicate packages and packages that are present in different versions.
@@ -827,8 +949,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * @author ak
 	 */
 	public static class JarChecker {
-		private static final Logger log = Logger.getLogger(JarChecker.class);
-
 		private static class Entry {
 			long _size;
 			String _jar;
@@ -848,7 +968,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 			@Override
 			public boolean equals(Object other) {
-				return ((Entry) other).size() == size();
+				if (other != null && other instanceof Entry) {
+					return ((Entry) other).size() == size();
+				}
+				return false;
 			}
 
 			@Override
@@ -902,21 +1025,21 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		}
 
 		private void reportErrors() {
-			StringBuffer sb = new StringBuffer();
+			StringBuilder sb = new StringBuilder();
 			String message = null;
 			NSArray<String> keys = ERXArrayUtilities.sortedArraySortedWithKey(packages.allKeys(), "toString");
 			for (Enumeration<String> enumerator = keys.objectEnumerator(); enumerator.hasMoreElements();) {
 				String packageName = enumerator.nextElement();
 				NSMutableArray<String> bundles = packages.objectForKey(packageName);
 				if (bundles.count() > 1) {
-					sb.append("\t").append(packageName).append("->").append(bundles).append("\n");
+					sb.append('\t').append(packageName).append("->").append(bundles).append('\n');
 				}
 			}
 			message = sb.toString();
 			if (message.length() > 0) {
 				startupLog.debug("The following packages appear multiple times:\n" + message);
 			}
-			sb = new StringBuffer();
+			sb = new StringBuilder();
 			NSMutableSet<String> classPackages = new NSMutableSet<String>();
 			keys = ERXArrayUtilities.sortedArraySortedWithKey(classes.allKeys(), "toString");
 			for (Enumeration<String> enumerator = keys.objectEnumerator(); enumerator.hasMoreElements();) {
@@ -924,7 +1047,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 				String packageName = className.replaceAll("/[^/]+?$", "");
 				NSMutableSet<Entry> bundles = classes.objectForKey(className);
 				if (bundles.count() > 1 && !classPackages.containsObject(packageName)) {
-					sb.append("\t").append(packageName).append("->").append(bundles).append("\n");
+					sb.append('\t').append(packageName).append("->").append(bundles).append('\n');
 					classPackages.addObject(packageName);
 				}
 			}
@@ -936,6 +1059,17 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	}
 
 	/**
+	 * This heuristic to determine if an application is deployed as servlet relays on the fact, 
+	 * that contextClassName() is set WOServletContext or ERXWOServletContext
+	 * 
+	 * @return true if the application is deployed as servlet.
+	 */
+	public boolean isDeployedAsServlet() {
+		return contextClassName().contains("Servlet"); // i.e one of WOServletContext or ERXWOServletContext
+	}
+
+
+	/**
 	 * Called prior to actually initializing the app. Defines framework load
 	 * order, class path order, checks patches etc.
 	 */
@@ -945,24 +1079,15 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			ClassLoader loader = AppClassLoader.getAppClassLoader();
 			Thread.currentThread().setContextClassLoader(loader);
 		}
-		if (!ERXApplication.isWO54()) {
-			Class arrayClass = NSMutableArray.class;
-			try {
-				Field f = arrayClass.getField("ERX_MARKER");
-			}
-			catch (NoSuchFieldException e) {
-				System.err.println("No ERX_MARKER field in NSMutableArray found. \nThis means your class path is incorrect. Adjust it so that ERExtensions come before JavaFoundation.");
-				System.exit(1);
-			}
-			catch (Exception e) {
-				e.printStackTrace();
-			}
-		}
 		ERXConfigurationManager.defaultManager().setCommandLineArguments(argv);
 		ERXFrameworkPrincipal.setUpFrameworkPrincipalClass(ERXExtensions.class);
 		// NSPropertiesCoordinator.loadProperties();
+		
+		if(enableERXShutdownHook()) {
+			ERXShutdownHook.useMe();
+		}
 	}
-
+	
 	/**
 	 * Installs several bugfixes and enhancements to WODynamicElements. Sets the
 	 * Context class name to "er.extensions.ERXWOContext" if it is "WOContext".
@@ -972,19 +1097,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	public void installPatches() {
 		ERXPatcher.installPatches();
 		if (contextClassName().equals("WOContext")) {
-			if (ERXApplication.isWO54()) {
-				setContextClassName("ERXWOContext54");
-			}
-			else {
-				setContextClassName(ERXWOContext.class.getName());
-			}
+			setContextClassName(ERXWOContext.class.getName());
 		}
 		if (contextClassName().equals("WOServletContext") || contextClassName().equals("com.webobjects.jspservlet.WOServletContext")) {
-			if (ERXApplication.isWO54()) {
-				setContextClassName("ERXWOServletContext54");
-			} else {
-				setContextClassName(ERXWOServletContext.class.getName());
-			}
+			setContextClassName(ERXWOServletContext.class.getName());
 		}
 
 		ERXPatcher.setClassForName(ERXWOForm.class, "WOForm");
@@ -1005,23 +1121,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		}
 
 		// ERXPatcher.setClassForName(ERXSubmitButton.class, "WOSubmitButton");
-
-		// Fix for 3190479 URI encoding should always be UTF8
-		// See http://www.w3.org/International/O-URL-code.html
-		// For WO 5.1.x users, please comment this statement to compile.
-		com.webobjects.appserver._private.WOURLEncoder.WO_URL_ENCODING = "UTF-8";
-
-		// WO 5.1 specific patches
-		if (ERXProperties.webObjectsVersionAsDouble() < 5.2d) {
-			// ERXWOText contains a patch for WOText to not include the value
-			// attribute (#2948062). Fixed in WO 5.2
-			ERXPatcher.setClassForName(ERXWOText.class, "WOText");
-
-		}
-		// ERXWOFileUpload returns a better warning than throwing a
-		// ClassCastException.
-		// Fixed in WO 5.2
-		// ERXPatcher.setClassForName(ERXWOFileUpload.class, "WOFileUpload");
 	}
 
 	@Override
@@ -1030,12 +1129,33 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	}
 
 	/**
-	 * The ERXApplication contructor.
+	 * The ERXApplication constructor.
 	 */
 	public ERXApplication() {
 		super();
+		
+		/* 
+		 * ERXComponentRequestHandler is a patched version of the original WOComponentRequestHandler
+		 * This method will tell Application to used the patched, the patched version will disallow direct component access by name
+		 * If you want to use the unpatched version set the property ERXDirectComponentAccessAllowed to true
+		 */
+		if (!ERXProperties.booleanForKeyWithDefault("ERXDirectComponentAccessAllowed", false)) {
+			ERXComponentRequestHandler erxComponentRequestHandler = new ERXComponentRequestHandler();
+			registerRequestHandler(erxComponentRequestHandler, componentRequestHandlerKey());
+		}
+		
 		ERXStats.initStatisticsIfNecessary();
 
+		try {
+			WOWebServicePatch.initServer();
+		} catch (Throwable e) {
+			Throwable cause = ERXExceptionUtilities.getMeaningfulThrowable(e);
+			if (!(cause instanceof ClassNotFoundException ||
+					cause instanceof NoClassDefFoundError)) {
+				e.printStackTrace();
+			}
+		}
+		
 		// WOFrameworksBaseURL and WOApplicationBaseURL properties are broken in 5.4.  
     	// This is the workaround.
 		frameworksBaseURL();
@@ -1050,10 +1170,15 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		if (!ERXConfigurationManager.defaultManager().isDeployedAsServlet() && (!wasERXApplicationMainInvoked || _loader == null)) {
 			_displayMainMethodWarning();
 		}
+		// try {
+		// 	NSBundle.mainBundle().versionString();
+		// } catch (NoSuchMethodError e) {
+		// 	throw new RuntimeException("No versionString() method in NSBundle found. \nThis means your class path is incorrect. Adjust it so that ERJars comes before JavaFoundation.");
+		// }
 		if (_loader == null) {
 			System.out.println("No loader: " + System.getProperty("java.class.path"));
 		} else if (!_loader.didLoad()) {
-			throw new RuntimeException("ERXExtensions have not been initialized. Please report the classpath and the rest of the bundles to the Wonder mailing list: " + "\nRemaining frameworks: " + (_loader == null ? "none" : _loader.allFrameworks) + "\nClasspath: " + System.getProperty("java.class.path"));
+			throw new RuntimeException("ERXExtensions have not been initialized. Debugging information can be enabled by adding the JVM argument: '-Der.extensions.appserver.projectBundleLoading=DEBUG'. Please report the classpath and the rest of the bundles to the Wonder mailing list: " + "\nRemaining frameworks: " + (_loader == null ? "none" : _loader.allFrameworks) + "\nClasspath: " + System.getProperty("java.class.path"));
 		}
 		if ("JavaFoundation".equals(NSBundle.mainBundle().name())) {
 			throw new RuntimeException("Your main bundle is \"JavaFoundation\".  You are not launching this WO application properly.  If you are using Eclipse, most likely you launched your WOA as a \"Java Application\" instead of a \"WO Application\".");
@@ -1102,6 +1227,8 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			WOMessage.setDefaultEncoding(defaultMessageEncoding);
 		}
 
+		log.info("Wonder version: " + ERXProperties.wonderVersion());
+
 		// Configure the WOStatistics CLFF logging since it can't be controlled
 		// by a property, grrr.
 		configureStatisticsLogging();
@@ -1110,14 +1237,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 		NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("didFinishLaunching", ERXConstant.NotificationClassArray), WOApplication.ApplicationDidFinishLaunchingNotification, null);
 
-		Boolean useUnlocker = useEditingContextUnlocker();
-		if (useUnlocker != null) {
-			ERXEC.setUseUnlocker(useUnlocker);
-		}
-		Boolean traceOpenLocks = traceOpenEditingContextLocks();
-		if (traceOpenLocks != null) {
-			ERXEC.setTraceOpenLocks(traceOpenLocks);
-		}
+		NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("addBalancerRouteCookieByNotification", new Class[] { NSNotification.class }), WORequestHandler.DidHandleRequestNotification, null);
 
 		// Signal handling support
 		if (ERXGracefulShutdown.isEnabled()) {
@@ -1140,11 +1260,12 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	    _replaceApplicationPathReplace = ERXProperties.stringForKey("er.extensions.ERXApplication.replaceApplicationPath.replace");
 	    
 	    if (_replaceApplicationPathPattern == null && rewriteDirectConnectURL()) {
-	    	_replaceApplicationPathPattern = "/cgi-bin/WebObjects/" + name() + ".woa";
+	    	_replaceApplicationPathPattern = "/cgi-bin/WebObjects/" + name() + applicationExtension();
 	        if (_replaceApplicationPathReplace == null) {
 	        	_replaceApplicationPathReplace = "";
 	        }
 	    }
+
 	}
 
 	/**
@@ -1152,40 +1273,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * If mod_rewrite is being used we don't want the adaptor prefix being part of the redirect.
 	 * @see com.webobjects.appserver.WOApplication#_newLocationForRequest(com.webobjects.appserver.WORequest)
 	 */
+	@Override
 	public String _newLocationForRequest(WORequest aRequest) {
 		return _rewriteURL(super._newLocationForRequest(aRequest));
-	}
-	/**
-	 * Decides whether to use editing context unlocking.
-	 * 
-	 * @return true if ECs should be unlocked after each RR-loop
-	 * @deprecated use er.extensions.ERXEC.useUnlocker property instead
-	 */
-	public Boolean useEditingContextUnlocker() {
-		Boolean useUnlocker = null;
-		if (ERXProperties.stringForKey("er.extensions.ERXApplication.useEditingContextUnlocker") != null) {
-			useUnlocker = Boolean.valueOf(ERXProperties.booleanForKeyWithDefault("er.extensions.ERXApplication.useEditingContextUnlocker", false));
-		}
-		return useUnlocker;
-	}
-
-	/**
-	 * Decides whether or not to keep track of open editing context locks.
-	 * 
-	 * @return true if editing context locks should be tracked
-	 * @deprecated use er.extensions.ERXEC.traceOpenLocks property instead
-	 */
-	public Boolean traceOpenEditingContextLocks() {
-		Boolean traceOpenLocks = null;
-		if (ERXProperties.stringForKey("er.extensions.ERXApplication.traceOpenEditingContextLocks") != null) {
-			traceOpenLocks = Boolean.valueOf(ERXProperties.booleanForKeyWithDefault("er.extensions.ERXApplication.traceOpenEditingContextLocks", false));
-		}
-		return traceOpenLocks;
 	}
 
 	/**
 	 * Configures the statistics logging for a given application. By default
-	 * will log to a file <base log directory>/<WOApp Name>-<host>-<port>.log
+	 * will log to a file &lt;base log directory&gt;/&lt;WOApp Name&gt;-&lt;host&gt;-&lt;port&gt;.log
 	 * if the base log path is defined. The base log path is defined by the
 	 * property <code>er.extensions.ERXApplication.StatisticsBaseLogPath</code>
 	 * The default log rotation frequency is 24 hours, but can be changed by
@@ -1295,16 +1390,19 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	/**
 	 * Adds support for automatic application cycling. Applications can be
-	 * configured to cycle in two ways:<br/> <br/> The first way is by setting
+	 * configured to cycle in two ways:
+	 * <p>
+	 * The first way is by setting
 	 * the System property <b>ERTimeToLive</b> to the number of seconds (+ a
 	 * random interval of 10 minutes) that the application should be up before
 	 * terminating. Note that when the application's time to live is up it will
-	 * quit calling the method <code>killInstance</code>.<br/> <br/> The
+	 * quit calling the method <code>killInstance</code>.
+	 * <p>The
 	 * second way is by setting the System property <b>ERTimeToDie</b> to the
 	 * time in seconds after midnight when the app should be starting to refuse
 	 * new sessions. In this case when the application starts to refuse new
 	 * sessions it will also register a kill timer that will terminate the
-	 * application between 0 minutes and 1:00 minutes.<br/>
+	 * application between 0 minutes and 1:00 minutes.
 	 */
 	@Override
 	public void run() {
@@ -1324,7 +1422,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 				log.info("Instance will not live past " + timeToDie + ":00.");
 				NSLog.out.appendln("Instance will not live past " + timeToDie + ":00.");
 				NSTimestamp now = new NSTimestamp();
-				int s = (timeToDie - ERXTimestampUtility.hourOfDay(now)) * 3600 - ERXTimestampUtility.minuteOfHour(now) * 60;
+				int s = (timeToDie - ERXTimestampUtilities.hourOfDay(now)) * 3600 - ERXTimestampUtilities.minuteOfHour(now) * 60;
 				if (s < 0)
 					s += 24 * 3600; // how many seconds to the deadline
 	
@@ -1348,34 +1446,11 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		}
 	}
 
-	/**
-	 * Creates the request object for this loop. Calls _createRequest(). For WO
-	 * 5.3.
-	 */
-	@SuppressWarnings("all") // Suppress @Override warning for 5.4
-	public WORequest createRequest(String aMethod, String aURL, String anHTTPVersion, NSDictionary someHeaders, NSData aContent, NSDictionary someInfo) {
-		return _createRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
-	}
-
-	/**
-	 * Creates the request object for this loop. Calls _createRequest(). For WO
-	 * 5.4.
-	 */
-	@SuppressWarnings("all")
-	// Suppress @Override warning for 5.3
-	public WORequest createRequest(String method, String aurl, String anHTTPVersion, Map<String, ? extends List<String>> someHeaders, NSData content, Map<String, Object> someInfo) {
-		return _createRequest(method, aurl, anHTTPVersion, (someHeaders != null ? new NSDictionary<String, Object>(someHeaders, true) : null), content, (someInfo != null ? new NSDictionary<String, Object>(someInfo, true) : null));
-	}
-
-	/**
-	 * Bottleneck for WORequest creation in WO 5.3 and 5.4 to use an
-	 * {@link ERXRequest} object that fixes a bug with localization.
-	 */
-	protected WORequest _createRequest(String aMethod, String aURL, String anHTTPVersion, NSDictionary someHeaders, NSData aContent, NSDictionary someInfo) {
+	@Override
+	public WORequest createRequest(String aMethod, String aURL, String anHTTPVersion, Map<String, ? extends List<String>> someHeaders, NSData aContent, Map<String, Object> someInfo) {
 		// Workaround for #3428067 (Apache Server Side Include module will feed
 		// "INCLUDED" as the HTTP version, which causes a request object not to
-		// be
-		// created by an exception.
+		// be created by an exception.
 		if (anHTTPVersion == null || anHTTPVersion.startsWith("INCLUDED")) {
 			anHTTPVersion = "HTTP/1.0";
 		}
@@ -1384,18 +1459,15 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		// The content-type header makes the WO parser only look at the content. Which is empty.
 		// http://lists.macosforge.org/pipermail/webkit-unassigned/2007-November/053847.html
 		// http://jira.atlassian.com/browse/JRA-13791
-		if ("GET".equalsIgnoreCase(aMethod) && someHeaders != null && someHeaders.objectForKey("content-type") != null)
-		{
-			someHeaders = someHeaders.mutableClone();
-			((NSMutableDictionary)someHeaders).removeObjectForKey("content-type");
+		if ("GET".equalsIgnoreCase(aMethod) && someHeaders != null && someHeaders.get("content-type") != null) {
+			someHeaders.remove("content-type");
 		}
 
 		if (rewriteDirectConnectURL()) {
-			aURL = "/cgi-bin/WebObjects/" + name() + ".woa" + aURL;
+			aURL = adaptorPath() + name() + applicationExtension() + aURL;
 		}
 
-		WORequest worequest = new ERXRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
-		return worequest;
+		return new ERXRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
 	}
 
 	/**
@@ -1439,6 +1511,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * 
 	 * @author ak
 	 */
+	@Override
 	public WOComponentDefinition _componentDefinition(String s, NSArray nsarray) {
 		if(ERXProperties.booleanForKeyWithDefault("er.extensions.ERXApplication.fixCachingEnabled", true)) {
 			// _expectedLanguages already contains all the languages in all projects, so
@@ -1548,7 +1621,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * Overridden to fix that direct connect apps can't refuse new sessions.
 	 */
-
 	@Override
 	public synchronized void refuseNewSessions(boolean value) {
 		boolean success = false;
@@ -1620,11 +1692,12 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * The name suffix is appended to the current name of the application. This
 	 * adds the ability to add a useful suffix to differentiate between
-	 * different sets of applications on the same machine.<br/> <br/> The name
-	 * suffix is set via the System property <b>ERApplicationNameSuffix</b>.<br/>
-	 * <br/> For example if the name of an application is Buyer and you want to
+	 * different sets of applications on the same machine.
+	 * <p>
+	 * The name suffix is set via the System property <b>ERApplicationNameSuffix</b>.
+	 * For example if the name of an application is Buyer and you want to
 	 * have a training instance appear with the name BuyerTraining then you
-	 * would set the ERApplicationNameSuffix to Training.<br/> <br/>
+	 * would set the ERApplicationNameSuffix to Training.
 	 * 
 	 * @return the System property <b>ERApplicationNameSuffix</b> or
 	 *         <code>null</code>
@@ -1644,7 +1717,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * Adds the ability to completely change the applications name by setting
 	 * the System property <b>ERApplicationName</b>. Will also append the
-	 * <code>nameSuffix</code> if one is set.<br/> <br/>
+	 * <code>nameSuffix</code> if one is set.
 	 * 
 	 * @return the computed name of the application.
 	 */
@@ -1664,7 +1737,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	}
 
 	/**
-	 * This method returns {@link WOApplication}'s <code>name</code> method.<br/>
+	 * This method returns {@link WOApplication}'s <code>name</code> method.
 	 * 
 	 * @return the name of the application executable.
 	 */
@@ -1675,7 +1748,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * Puts together a dictionary with a bunch of useful information relative to
 	 * the current state when the exception occurred. Potentially added
-	 * information:<br/>
+	 * information:
 	 * <ol>
 	 * <li>the current page name</li>
 	 * <li>the current component</li>
@@ -1685,8 +1758,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * <li>the previous page list (from the WOStatisticsStore)</li>
 	 * </ol>
 	 * Also, in case the top-level exception was a EOGeneralAdaptorException,
-	 * then you also get the failed ops and the sql exception. <br/>
+	 * then you also get the failed ops and the sql exception.
 	 * 
+	 * @param e exception
+	 * @param context the current context
 	 * @return dictionary containing extra information for the current context.
 	 */
 	public NSMutableDictionary extraInformationForExceptionInContext(Exception e, WOContext context) {
@@ -1698,7 +1773,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	/**
 	 * Reports an exception. This method only logs the error and could be
-	 * overriden to return a valid error page.
+	 * overridden to return a valid error page.
 	 * 
 	 * @param exception
 	 *            to be reported
@@ -1726,6 +1801,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 */
 	// NOTE: if you use WO 5.1, comment out this method, otherwise it won't
 	// compile.
+	// CHECKME this was created for WO 5.2, do we still need this for 5.4.3?
 	@Override
 	public WOResponse handleActionRequestError(WORequest aRequest, Exception exception, String reason, WORequestHandler aHandler, String actionClassName, String actionName, Class actionClass, WOAction actionInstance) {
 		WOContext context = actionInstance != null ? actionInstance.context() : null;
@@ -1947,6 +2023,13 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		// don't end up on
 		// someone else's thread by accident
 		ERXThreadStorage.reset();
+		/*
+		 * Clear the _ThreadInfo in the EOObserverCenter for this thread to prevent a bug
+		 * which results in ECs loosing track of change state on multiple worker threads. 
+		 * A more complete explanation available here:
+		 * http://www.mail-archive.com/webobjects-dev@lists.apple.com/msg25391.html
+		 */
+		EOObserverCenter.notifyObserversObjectWillChange(null);
 		// We *always* want to unlock left over ECs.
 		ERXEC.unlockAllContextsForCurrentThread();
 		// we don't want this hanging around
@@ -1978,7 +2061,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * @return response
 	 */
 	@Override
-
 	public WOResponse dispatchRequest(WORequest request) {
 		WOResponse response = null;
 		ERXDelayedRequestHandler delayedRequestHandler = delayedRequestHandler();
@@ -2038,29 +2120,33 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 					long start = System.currentTimeMillis();
 					long inputBytesLength;
 					InputStream contentInputStream = response.contentInputStream();
-					byte[] compressedData;
+					NSData compressedData;
 					if (contentInputStream != null) {
 						inputBytesLength = response.contentInputStreamLength();
-						NSData compressedNSData = ERXCompressionUtilities.gzipInputStreamAsNSData(contentInputStream, (int)inputBytesLength);
-						//compressedData = compressedNSData._bytesNoCopy();
-						compressedData = compressedNSData.bytes();
+						compressedData = ERXCompressionUtilities.gzipInputStreamAsNSData(contentInputStream, (int)inputBytesLength);
 						response.setContentStream(null, 0, 0);
 					}
 					else {
 						NSData input = response.content();
 						inputBytesLength = input.length();
-						compressedData = (inputBytesLength > 0) ? ERXCompressionUtilities.gzipByteArray(input._bytesNoCopy()) : null;
+						if(inputBytesLength > 0)
+						{
+							compressedData = ERXCompressionUtilities.gzipByteArrayAsNSData(input._bytesNoCopy(), 0, (int)inputBytesLength);
+						} else
+						{
+							compressedData = NSData.EmptyData;
+						}
 					}
 					if ( inputBytesLength > 0 ) {
 						if (compressedData == null) {
 							// something went wrong
 						}
 						else {
-							response.setContent(new NSData(compressedData, new NSRange(0, compressedData.length), true));
-							response.setHeader(String.valueOf(compressedData.length), "content-length");
+							response.setContent(compressedData);
+							response.setHeader(String.valueOf(compressedData.length()), "content-length");
 							response.setHeader("gzip", "content-encoding");
 							if (log.isDebugEnabled()) {
-								log.debug("before: " + inputBytesLength + ", after " + compressedData.length + ", time: " + (System.currentTimeMillis() - start));
+								log.debug("before: " + inputBytesLength + ", after " + compressedData.length() + ", time: " + (System.currentTimeMillis() - start));
 							}
 						}
 					}
@@ -2099,7 +2185,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * Override to perform any last minute cleanup before the application
 	 * terminates. See
-	 * {@class er.extensions.ERXGracefulShutdown ERXGracefulShutdown} for where
+	 * {@link er.extensions.components.ERXGracefulShutdown ERXGracefulShutdown} for where
 	 * this is called if signal handling is enabled. Default implementation
 	 * calls terminate.
 	 */
@@ -2150,24 +2236,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			}
 		}
 		return _useSessionStoreDeadlockDetection.booleanValue();
-	}
-
-	/**
-	 * Returns true if this app is running in WO 5.4.
-	 * 
-	 * @return true if this app is running in WO 5.4
-	 */
-	public static boolean isWO54() {
-		if (ERXApplication.isWO54 == null) {
-			try {
-				Method getWebObjectsVersionMethod = WOApplication.class.getMethod("getWebObjectsVersion", new Class[0]);
-				ERXApplication.isWO54 = Boolean.TRUE;
-			}
-			catch (Exception e) {
-				ERXApplication.isWO54 = Boolean.FALSE;
-			}
-		}
-		return ERXApplication.isWO54.booleanValue();
 	}
 
 	/**
@@ -2223,6 +2291,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Returns whether or not this application is running in development-mode.
 	 * If you are using Xcode, you should add a WOIDE=Xcode setting to your
 	 * launch parameters.
+	 * @return <code>true</code> if application is in dev mode
 	 */
 	public boolean isDevelopmentMode() {
 		return ERXApplication._defaultIsDevelopmentMode();
@@ -2324,7 +2393,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	}
 
 	public Number sessionTimeOutInMinutes() {
-		return new Integer(sessionTimeOut().intValue() / 60);
+		return Integer.valueOf(sessionTimeOut().intValue() / 60);
 	}
 
 	protected static final ERXFormatterFactory _formatterFactory = new ERXFormatterFactory();
@@ -2369,6 +2438,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	/**
 	 * Returns an ERXMigrator with the lock owner name "appname-instancenumber".
+	 * @return migrator for this instance
 	 */
 	public ERXMigrator migrator() {
 		return new ERXMigrator(name() + "-" + host() + ":" + port());
@@ -2408,6 +2478,20 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	      processedURL = processedURL.replaceFirst(_replaceApplicationPathPattern, _replaceApplicationPathReplace);
 	    }
 		return processedURL;
+	}
+
+	/**
+	 * This method is called by ERXResourceManager and provides the application a hook
+	 * to rewrite generated URLs for resources.
+	 *
+	 * @param url
+	 *            the URL to rewrite
+	 * @param bundle
+	 *            the bundle the resource is located in
+	 * @return the rewritten URL
+	 */
+	public String _rewriteResourceURL(String url, WODeployedBundle bundle) {
+	    return url;
 	}
 
 	/**
@@ -2609,9 +2693,22 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		return additionalAdaptors;
 	}
 
+	@Override
+	public WOAdaptor adaptorWithName(String aClassName, NSDictionary<String, Object> anArgsDictionary) {
+		try {
+			return super.adaptorWithName(aClassName, anArgsDictionary);
+		} catch (NSForwardException e) {
+			Throwable rootCause = ERXExceptionUtilities.getMeaningfulThrowable(e);
+			if ((rootCause instanceof BindException) && stopPreviousDevInstance()) {
+				return super.adaptorWithName(aClassName, anArgsDictionary);
+			}
+			throw e;
+		}
+	}
+	
 	protected void _debugValueForDeclarationNamed(WOComponent component, String verb, String aDeclarationName, String aDeclarationType, String aBindingName, String anAssociationDescription, Object aValue) {
 		if (aValue instanceof String) {
-			StringBuffer stringbuffer = new StringBuffer(((String) aValue).length() + 2);
+			StringBuilder stringbuffer = new StringBuilder(((String) aValue).length() + 2);
 			stringbuffer.append('"');
 			stringbuffer.append(aValue);
 			stringbuffer.append('"');
@@ -2621,7 +2718,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			aDeclarationName = "[inline]";
 		}
 
-		StringBuffer sb = new StringBuffer();
+		StringBuilder sb = new StringBuilder();
 
 		//NSArray<WOComponent> componentPath = ERXWOContext._componentPath(ERXWOContext.currentContext());
 		//componentPath.lastObject()
@@ -2633,13 +2730,13 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 		if (!aDeclarationName.startsWith("_")) {
 			sb.append(aDeclarationName);
-			sb.append(":");
+			sb.append(':');
 		}
 		sb.append(aDeclarationType);
 
 		sb.append(" { ");
 		sb.append(aBindingName);
-		sb.append("=");
+		sb.append('=');
 
 		String valueStr = aValue != null ? aValue.toString() : "null";
 		if (anAssociationDescription.startsWith("class ")) {
@@ -2704,7 +2801,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Returns whether or not binding debugging is enabled for the given component
 	 * 
 	 * @param componentName the component name
-	 * @return whether or not binding debugging is enabled for the given componen
+	 * @return whether or not binding debugging is enabled for the given component
 	 */
 	public boolean debugEnabledForComponent(String componentName) {
 		return _debugComponents.containsObject(componentName);
@@ -2720,9 +2817,11 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	/**
 	 * Workaround for method missing in 5.3. Misnamed because static methods can't override client methods. 
 	 * @return the request handler key for ajax.
+	 * @deprecated use {@link #ajaxRequestHandlerKey()} instead
 	 */
+	@Deprecated
 	public static String erAjaxRequestHandlerKey() {
-		return ERXApplication.isWO54() ? "ja": "ajax";
+		return "ja";
 	}
 	
 	/**
@@ -2733,4 +2832,39 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		NSNotificationCenter.defaultCenter().postNotification(ApplicationWillTerminateNotification, this);
 		super.terminate();
 	}
+	
+	/**
+	 * Override default implementation that returns {".dll", ".exe"} and therefor prohibits IIS
+	 * as WebServer.
+	 */
+	@Override
+    public String[] adaptorExtensions() {
+        return myAppExtensions;
+    }
+	
+	public void addBalancerRouteCookieByNotification(NSNotification notification) {
+		if (notification.object() instanceof WOContext) {
+			addBalancerRouteCookie((WOContext) notification.object());
+		}
+	}
+
+	public void addBalancerRouteCookie(WOContext context) {
+		if (context != null && context.request() != null && context.response() != null) {
+			if (_proxyBalancerRoute == null) {
+				_proxyBalancerRoute = (name() + "_" + port().toString()).toLowerCase();
+				_proxyBalancerRoute = "." + _proxyBalancerRoute.replace('.', '_');
+			}
+			if (_proxyBalancerCookieName == null) {
+				_proxyBalancerCookieName = ("routeid_" + name()).toLowerCase();
+				_proxyBalancerCookieName = _proxyBalancerCookieName.replace('.', '_');
+			}
+			if (_proxyBalancerCookiePath == null) {
+				_proxyBalancerCookiePath = (System.getProperty("FixCookiePath") != null) ? System.getProperty("FixCookiePath") : "/";
+			}
+			WOCookie cookie = new WOCookie(_proxyBalancerCookieName, _proxyBalancerRoute, _proxyBalancerCookiePath, null, -1, context.request().isSecure(), true);
+			cookie.setExpires(null);
+			context.response().addCookie(cookie);
+		}
+	}
+  
 }
