@@ -9,8 +9,6 @@ package er.extensions.components;
 import java.util.Enumeration;
 import java.util.Vector;
 
-import org.apache.log4j.Logger;
-
 import com.webobjects.appserver.WOContext;
 import com.webobjects.appserver.WOResponse;
 import com.webobjects.eocontrol.EOEnterpriseObject;
@@ -22,9 +20,8 @@ import com.webobjects.foundation.NSSet;
 
 import er.extensions.foundation.ERXArrayUtilities;
 
-// ported from WebScript - Corrected nil context problem.
 /**
- * Works around a webscript bug.<br />
+ * Works around a webscript bug.
  * 
  * @binding list
  * @binding item
@@ -47,14 +44,16 @@ import er.extensions.foundation.ERXArrayUtilities;
  * @binding itemID optional ID for each checkbox element
  * @binding disabled
  */
-
 public class ERXCheckboxMatrix extends ERXNonSynchronizingComponent {
-    /** logging support */
-    public final static Logger log = Logger.getLogger(ERXCheckboxMatrix.class);
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
 
-    
-    private static final Integer DEFAULT_PADDING = new Integer(0);
-    private static final Integer DEFAULT_SPACING = new Integer(0);
+    private static final Integer DEFAULT_PADDING = Integer.valueOf(0);
+    private static final Integer DEFAULT_SPACING = Integer.valueOf(0);
 
     public ERXCheckboxMatrix(WOContext aContext) {
         super(aContext);
@@ -65,8 +64,10 @@ public class ERXCheckboxMatrix extends ERXNonSynchronizingComponent {
     public int index;
     public String wrapperElementID;
 
+    @Override
     public boolean isStateless() { return true; }
 
+    @Override
     public void reset() {
         invalidateCaches();
     }
@@ -113,6 +114,7 @@ public class ERXCheckboxMatrix extends ERXNonSynchronizingComponent {
         setSelections(new NSArray(v, r, true));
     }
 
+    @Override
     public void takeValueForKey(Object value, String key)
     {
         try {
@@ -185,10 +187,12 @@ public class ERXCheckboxMatrix extends ERXNonSynchronizingComponent {
         wrapperElementID=null;
     }
 
+    @Override
     public void sleep() {
         invalidateCaches();
     }
 
+    @Override
     public void appendToResponse(WOResponse aResponse, WOContext aContext) {
         // ** By setting these to nil, we allow the dictionary to change after the action and before the next cycle of this component (if the component is 	on a page which is recycled)
         invalidateCaches();
