@@ -11,7 +11,8 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.apache.log4j.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.webobjects.foundation.NSArray;
 import com.webobjects.foundation.NSData;
@@ -21,18 +22,17 @@ import com.webobjects.foundation.NSMutableArray;
 import com.webobjects.foundation.NSPropertyListSerialization;
 
 import er.extensions.foundation.ERXArrayUtilities;
-import er.extensions.jdbc.ERXJDBCAdaptor;
 
 /**
  * General purpose constant class, useful when you want reference object that are not
- * bytes or strings in the DB like what you get with the factory classes. <br />
+ * bytes or strings in the DB like what you get with the factory classes.
  * If you use objects of this class, you might be able to completely remove the EOSharedEditingContext
- * (the google search term for "why does my app lock up").<br />
- * <br>
+ * (the google search term for "why does my app lock up").
+ * <p>
  * To use the Number constants, you need to add an entry <code>ERXConstantClassName=Test.Status</code> to the attribute's userInfo 
- * in question and your EO's class description needs to be a {@link er.extensions.eof.ERXEntityClassDescription}, also
- * you must enable the {@link er.extension.ERXJDBCAdaptor}.<br />
- * <br>
+ * in question and your EO's class description needs to be a {@link ERXEntityClassDescription}, also
+ * you must enable the {@link er.extensions.jdbc.ERXJDBCAdaptor}.
+ * <p>
  * The String and Byte based constants can be used with a custom class type:<pre><code>
  * 
  * ERCMailMessage.plist:
@@ -78,7 +78,6 @@ import er.extensions.jdbc.ERXJDBCAdaptor;
  *     public static ERCMailState PROCESSING_STATE = new ERCMailState("proc", "Processing");
  * }
  * </code></pre>
- * <br />
  * An example would be:
  * <pre><code>
  * public class Test extends EOGenericRecord {
@@ -134,12 +133,11 @@ import er.extensions.jdbc.ERXJDBCAdaptor;
  * 
  * // you can compare by equality
  * test.getStatus() == Test.Status.ON
- * </pre></code>
+ * </code></pre>
  * Note that upon class initialization 2500 Integers will be created and cached, from 0 - 2499.
  */
 public abstract class ERXConstant {
-	
-	private static final Logger log = Logger.getLogger(ERXConstant.class);
+	private static final Logger log = LoggerFactory.getLogger(ERXConstant.class);
 
 	/**
 	 * Holds the value store, grouped by class name.
@@ -176,9 +174,7 @@ public abstract class ERXConstant {
         synchronized (_store) {
             Map classMap = keyMap(clazzName, false);
             Constant result = (Constant) classMap.get(value);
-            if(log.isDebugEnabled()) {
-                log.debug("Getting " + result + " for " + clazzName + " and " + value);
-            }
+            log.debug("Getting {} for {} and {}", result, clazzName, value);
             return result;
         }
     }
@@ -208,14 +204,19 @@ public abstract class ERXConstant {
         synchronized (_store) {
             String className = clazz.getName();
             Map classMap = keyMap(className, true);
-            if(log.isDebugEnabled()) {
-                log.debug("Putting " + key + " for " + className);
-            }
+            log.debug("Putting {} for {}", key, className);
             classMap.put(key, value);
         }
     }
     
 	public static class NumberConstant extends Number implements Constant {
+		/**
+		 * Do I need to update serialVersionUID?
+		 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+		 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+		 */
+		private static final long serialVersionUID = 1L;
+
 		/**
 		 * Holds the value.
 		 */
@@ -253,6 +254,7 @@ public abstract class ERXConstant {
 		/**
 		 * Number interface implementation, returns the value.
 		 */
+		@Override
 		public final double doubleValue() {
 			return intValue();
 		}
@@ -260,6 +262,7 @@ public abstract class ERXConstant {
 		/**
 		 * Number interface implementation, returns the value.
 		 */
+		@Override
 		public final float floatValue() {
 			return intValue();
 		}
@@ -267,6 +270,7 @@ public abstract class ERXConstant {
 		/**
 		 * Number interface implementation, returns the value.
 		 */
+		@Override
 		public final int intValue() {
 			return _value;
 		}
@@ -274,6 +278,7 @@ public abstract class ERXConstant {
 		/**
 		 * Number interface implementation, returns the value.
 		 */
+		@Override
 		public final long longValue() {
 			return intValue();
 		}
@@ -281,6 +286,7 @@ public abstract class ERXConstant {
 		/**
 		 * Returns the value.
 		 */
+		@Override
 		public final int hashCode() {
 			return _value;
 		}
@@ -294,17 +300,19 @@ public abstract class ERXConstant {
 			return name() + " (" + intValue() +  ")";
 		}
 		
+		@Override
 		public String toString() {
 			return getClass().getName() + ": " + userPresentableDescription();
 		}
 
-		public Object value() {
+		public Number value() {
 			return integerForInt(intValue());
 		}
 		
 		/**
 		 * Overridden to compare by value.
 		 */
+		@Override
 		public final boolean equals(Object otherObject) {
 			if(otherObject == null) {
 				return false;
@@ -366,7 +374,7 @@ public abstract class ERXConstant {
 			return _sortOrder;
 		}
 		
-		public Object value() {
+		public String value() {
 			return _value;
 		}
 		
@@ -374,6 +382,7 @@ public abstract class ERXConstant {
 			return name() + " (" + value() +  ")";
 		}
 		
+		@Override
 		public String toString() {
 			return getClass().getName() + ": " + userPresentableDescription();
 		}
@@ -404,6 +413,10 @@ public abstract class ERXConstant {
 			this((NSData)NSPropertyListSerialization.propertyListFromString(value.toString()),name);
 		}
 		
+		public ByteConstant(byte value[], String name) {
+			this(new NSData(value),name);
+		}
+		
 		public ByteConstant(NSData value, String name) {
 			_value = value;
 			_name = name;
@@ -419,7 +432,7 @@ public abstract class ERXConstant {
 			return _sortOrder;
 		}
 		
-		public Object value() {
+		public NSData value() {
 			return _value;
 		}
 		
@@ -427,6 +440,7 @@ public abstract class ERXConstant {
 			return name();
 		}
 		
+		@Override
 		public String toString() {
 			return getClass().getName() + ": " + userPresentableDescription();
 		}
@@ -456,7 +470,7 @@ public abstract class ERXConstant {
     
     protected static Integer[] INTEGERS=new Integer[MAX_INT];
     static {
-        for (int i=0; i<MAX_INT; i++) INTEGERS[i]=new Integer(i);
+        for (int i=0; i<MAX_INT; i++) INTEGERS[i]=Integer.valueOf(i);
     }
 
     public static final Object EmptyObject = new Object();
@@ -464,11 +478,11 @@ public abstract class ERXConstant {
     public static final NSArray EmptyArray = NSArray.EmptyArray;
     public static final NSArray SingleNullValueArray = new NSArray(NSKeyValueCoding.NullValue);
     public static final NSDictionary EmptyDictionary = NSDictionary.EmptyDictionary;
-    public static final Integer MinusOneInteger = new Integer(-1);
+    public static final Integer MinusOneInteger = Integer.valueOf(-1);
     public static final Integer OneInteger = integerForInt(1);
-    public static final Integer ZeroInteger = integerForInt (0);
-    public static final Integer TwoInteger = integerForInt (2);
-    public static final Integer ThreeInteger = integerForInt (3);
+    public static final Integer ZeroInteger = integerForInt(0);
+    public static final Integer TwoInteger = integerForInt(2);
+    public static final Integer ThreeInteger = integerForInt(3);
     public static final BigDecimal ZeroBigDecimal = new BigDecimal(0.00);
     public static final BigDecimal OneBigDecimal = new BigDecimal(1.00); 
     public static final Class[] EmptyClassArray = new Class[0];
@@ -484,17 +498,7 @@ public abstract class ERXConstant {
      * @return potentially cache Integer for a given int
      */
     public static Integer integerForInt(int i) {
-        return (i>=0 && i<MAX_INT) ? INTEGERS[i] : new Integer(i);
+        return (i>=0 && i<MAX_INT) ? INTEGERS[i] : Integer.valueOf(i);
     }
 
-    /**
-     * Returns an Integer for a given String
-     * @throws NumberFormatException forwarded from the
-     *		parseInt method off of Integer
-     * @return potentially cache Integer for a given String
-     */
-    // MOVEME: ERXStringUtilities
-    public static Integer integerForString(String s) throws NumberFormatException {
-        return integerForInt(Integer.parseInt(s));
-    }
 }
