@@ -11,6 +11,13 @@ import com.webobjects.appserver.WOComponent;
 import com.webobjects.appserver.WOContext;
 
 public class WOKeyValueConditional extends WOComponent {
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
+
     protected String _key;
     protected int _negate = -1;  // -1 is invalid, 0 is false, and 1 is true
 
@@ -41,7 +48,7 @@ public class WOKeyValueConditional extends WOComponent {
             } else if (thisNegate instanceof Integer) {
                 _negate = (((Integer) thisNegate).intValue() == 0) ? 0 : 1;
             } else if (thisNegate instanceof String) {
-                _negate = (new Boolean((String) thisNegate)).booleanValue() ? 1 : 0;
+                _negate = (Boolean.valueOf((String) thisNegate)).booleanValue() ? 1 : 0;
             } else {
                 _negate = 0;
             }
@@ -49,15 +56,11 @@ public class WOKeyValueConditional extends WOComponent {
         return _negate != 0;
     }
 
+    @Override
     public boolean isStateless() {
         return true;
     }
     
-    @Override
-    public boolean synchronizesVariablesWithBindings() {
-    	return false;
-    }
-
     protected void _invalidateCaches() {
         // In order for this to behave like an element, all instance
         // variables need to be flushed when this component sleeps
@@ -66,6 +69,7 @@ public class WOKeyValueConditional extends WOComponent {
         _negate = -1;
     }
 
+    @Override
     public void reset()  {
         _invalidateCaches();
     }
