@@ -1,9 +1,9 @@
 /*
-� Copyright 2006- 2007 Apple Computer, Inc. All rights reserved.
+© Copyright 2006- 2007 Apple Computer, Inc. All rights reserved.
 
-IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. (�Apple�) in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
+IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. ("Apple") in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
 
-In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple�s copyrights in this original Apple software (the �Apple Software�), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
+In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple's copyrights in this original Apple software (the "Apple Software"), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
 
 The Apple Software is provided by Apple on an "AS IS" basis.  APPLE MAKES NO WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION THE IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, REGARDING THE APPLE SOFTWARE OR ITS USE AND OPERATION ALONE OR IN COMBINATION WITH YOUR PRODUCTS. 
 
@@ -16,7 +16,8 @@ import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.util.Enumeration;
 
-import org.apache.log4j.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.webobjects.appserver.WOApplication;
 import com.webobjects.appserver.WOHTTPConnection;
@@ -31,11 +32,11 @@ import com.webobjects.foundation.NSMutableArray;
 import com.webobjects.foundation.NSMutableDictionary;
 import com.webobjects.foundation._NSThreadsafeMutableArray;
 
+import er.extensions.appserver.ERXResponse;
 import er.extensions.foundation.ERXProperties;
 
 public class MHost extends MObject {
-    
-    private static final Logger log = Logger.getLogger(MHost.class);
+    private static final Logger log = LoggerFactory.getLogger(MHost.class);
     
     private final int _receiveTimeout = ERXProperties.intForKeyWithDefault("JavaMonitor.receiveTimeout", 10000);
 
@@ -104,7 +105,7 @@ public class MHost extends MObject {
                 // AK: From *my* POV, we should check if this is the localhost and exit if it is,
                 // as I had this happen when you set -WOHost something and DNS isn't available.
                 // As it stands now, wotaskd will launch, but not really register and app (or get weirdo exceptions)
-                log.error("Error getting address for Host: " + name());
+                log.error("Error getting address for Host: {}", name());
                 try {
                     Thread.sleep(2000);
                 } catch (InterruptedException e) {
@@ -180,6 +181,7 @@ public class MHost extends MObject {
         return values;
     }
 
+    @Override
     public String toString() {
         if (false) {
             return values.toString() + " " + "address = " + _address + " " + "runningInstances = " + runningInstances
@@ -199,14 +201,11 @@ public class MHost extends MObject {
                 runningInstances++;
             }
         }
-        return new Integer(runningInstances);
+        return Integer.valueOf(runningInstances);
     }
 
     public boolean isPortInUse(Integer port) {
-        if (instanceWithPort(port) == null)
-            return false;
-        else
-            return true;
+        return instanceWithPort(port) != null;
     }
 
     // KH - this is probably slow :)
@@ -214,7 +213,7 @@ public class MHost extends MObject {
         Integer retVal = null;
         do {
             if (isPortInUse(startingPort)) {
-                startingPort = new Integer(startingPort.intValue() + 1);
+                startingPort = Integer.valueOf(startingPort.intValue() + 1);
             } else {
                 retVal = startingPort;
             }
@@ -385,8 +384,7 @@ public class MHost extends MObject {
             if (willChange) {
                 _siteConfig.hostErrorArray.addObjectIfAbsent(this);
             }
-            aResponse = new WOResponse();
-            aResponse.setContent(errorResponse);
+            aResponse = new ERXResponse(errorResponse);
         } else {
             // if we successfully synced, clear the error dictionary
             if (isSync && isAvailable) {
