@@ -1,9 +1,9 @@
 /*
-© Copyright 2006- 2007 Apple Computer, Inc. All rights reserved.
+¬© Copyright 2006- 2007 Apple Computer, Inc. All rights reserved.
 
-IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. (“Apple”) in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
+IMPORTANT:  This Apple software is supplied to you by Apple Computer, Inc. ("Apple") in consideration of your agreement to the following terms, and your use, installation, modification or redistribution of this Apple software constitutes acceptance of these terms.  If you do not agree with these terms, please do not use, install, modify or redistribute this Apple software.
 
-In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple’s copyrights in this original Apple software (the “Apple Software”), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
+In consideration of your agreement to abide by the following terms, and subject to these terms, Apple grants you a personal, non-exclusive license, under Apple's copyrights in this original Apple software (the "Apple Software"), to use, reproduce, modify and redistribute the Apple Software, with or without modifications, in source and/or binary forms; provided that if you redistribute the Apple Software in its entirety and without modifications, you must retain this notice and the following text and disclaimers in all such redistributions of the Apple Software.  Neither the name, trademarks, service marks or logos of Apple Computer, Inc. may be used to endorse or promote products derived from the Apple Software without specific prior written permission from Apple.  Except as expressly stated in this notice, no other rights or licenses, express or implied, are granted by Apple herein, including but not limited to any patent rights that may be infringed by your derivative works or by other works in which the Apple Software may be incorporated.
 
 The Apple Software is provided by Apple on an "AS IS" basis.  APPLE MAKES NO WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION THE IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, REGARDING THE APPLE SOFTWARE OR ITS USE AND OPERATION ALONE OR IN COMBINATION WITH YOUR PRODUCTS. 
 
@@ -29,21 +29,24 @@ public class _NSObjectUtilities  {
      * These methods will eventually do an exhaustive dump of the Object in question using Reflection APIs.
      * This is very slow, and outputs fully qualified _everything_.
      * These are considered private API, even though they are publicly visible.
-     * Also note that this may alter the state of the object to be dumped - it is _not_ garanteed to be free of side-effects.
-     * showInterfaces - will show implemented interfaces
-     * showConstructors - will show available constructors
-     * showFields - will show ivars
-     * getFields - will attempt to get ivar values (only if showFields)
-     * showMethods - will show method signatures
-     * getMethodsJava - will attempt to invoke all methods starting with "get" and taking no arguments (only if showMethods)
-     * getMethodsNext - will attempt to invoke all methods with the same name as an ivar (ignoring starting '_') and taking no arguments (only if showMethods)
+     * Also note that this may alter the state of the object to be dumped - it is _not_ guaranteed to be free of side-effects.
+     * @param o object to dump
+     * @param showInterfaces - will show implemented interfaces
+     * @param showConstructors - will show available constructors
+     * @param showFields - will show ivars
+     * @param getFields - will attempt to get ivar values (only if showFields)
+     * @param showMethods - will show method signatures
+     * @param getMethodsJava - will attempt to invoke all methods starting with "get" and taking no arguments (only if showMethods)
+     * @param getMethodsNext - will attempt to invoke all methods with the same name as an ivar (ignoring starting '_') and taking no arguments (only if showMethods)
+     * @return serialized object
+     * @throws IOException if something goes wrong
      */
     public static String dumpObjectAsString(Object o,
                                     boolean showInterfaces, boolean showConstructors,
                                     boolean showFields, boolean getFields,
                                     boolean showMethods, boolean getMethodsJava, boolean getMethodsNext) throws IOException {
         StringWriter outputWriter = new StringWriter();
-        String CR = new Character('\n').toString();
+        String CR = Character.valueOf('\n').toString();
         outputWriter.write(CR);
         outputWriter.write("This object's hashCode is = " + o.hashCode() + CR);
 
@@ -59,7 +62,7 @@ public class _NSObjectUtilities  {
                 ourLength = Array.getLength(o);
             } catch (IllegalArgumentException e) {}
             outputWriter.write(" and size " + ourLength + CR);
-            // Walk through the array, writeing out the state of all the elements in the array?
+            // Walk through the array, writing out the state of all the elements in the array?
         } else {
             outputWriter.write(ourName + CR);
         }
